Add QEMU and RISC-V cross binutils, fix version checkers
- qemu 10.2.0: x86_64/riscv32/riscv64 system + linux-user with KVM
- binutils-riscv-elf 2.45.1: RISC-V bare-metal cross-compiler
- Fix version checkers to use working upstream URLs
- icestorm: use skip: (git-based, no releases)
- gtkwave: correct version to 3.3.116
- iverilog: use underscore version format (12_0)

--- a/packages/e.toml
+++ b/packages/e.toml
@@ -134,7 +134,7 @@ build_commands = [
 
 [packages.eigen]
 version = "5.0.1"
-version_check = "gitlab:libeigen/eigen"
+version_check = "url:https://gitlab.com/libeigen/eigen/-/tags|tags/([0-9]+\\.[0-9]+\\.[0-9]+)"
 description = "C++ template library for linear algebra"
 url = "https://gitlab.com/libeigen/eigen/-/archive/${version}/eigen-${version}.tar.gz"
 git_url = "https://gitlab.com/libeigen/eigen.git"
