Fix FPGA/EDA package builds
- yosys: fix URL (v0.61/yosys.tar.gz), add source_dir
- icestorm: skip iceprog (needs libftdi), use SUBDIRS
- gtkwave: use autotools, disable tcl (needs tk)
- binutils-riscv-elf: add source_dir, fix build paths
- newlib-riscv-elf: add source_dir, fix build paths
- gcc-riscv-elf: use gcc-snapshot like main gcc

Note: newlib/gcc-riscv-elf need bootstrap build (complex).
For pcnoko, use clang+binutils-riscv-elf instead.

--- a/packages/b.toml
+++ b/packages/b.toml
@@ -151,13 +151,15 @@ version = "2.45.1"
 version_check = "gnu:binutils"
 description = "GNU binutils for RISC-V bare-metal (cross-compiler)"
 url = "https://ftpmirror.gnu.org/gnu/binutils/binutils-${version}.tar.xz"
+tarball = "binutils-${version}.tar.xz"
+source_dir = "binutils-${version}"
 git_url = "git://sourceware.org/git/binutils-gdb.git"
 use_git = false
 stage = 15
 build_commands = [
-    "mkdir -p build && cd build && ../configure --prefix=/usr --target=riscv64-elf --with-sysroot --disable-nls --disable-werror --enable-64-bit-bfd",
-    "cd build && make -j${NPROC}",
-    "cd build && make DESTDIR=${PKG} install"
+    "mkdir -p ${srcdir}/build-riscv && cd ${srcdir}/build-riscv && ${srcdir}/configure --prefix=/usr --target=riscv64-elf --with-sysroot --disable-nls --disable-werror --enable-64-bit-bfd",
+    "cd ${srcdir}/build-riscv && make -j${NPROC}",
+    "cd ${srcdir}/build-riscv && make DESTDIR=${PKG} install"
 ]
 provides = ["/usr/bin/riscv64-elf-as", "/usr/bin/riscv64-elf-ld", "/usr/bin/riscv64-elf-objcopy"]
 
