--- a/packages/g.toml
+++ b/packages/g.toml
@@ -540,16 +540,20 @@ url = "https://github.com/gtkwave/gtkwave/archive/refs/tags/v${version}.tar.gz"
 git_url = "https://github.com/gtkwave/gtkwave.git"
 use_git = false
 stage = 15
+source_dir = "gtkwave-${version}/gtkwave3-gtk3"
 depends = ["gtk3", "tcl", "tk", "bzip2", "xz"]
-build_system = "meson"
-meson_flags = "-Dgtk=3"
+build_commands = [
+    "./configure --prefix=/usr --with-tcl=/usr/lib --disable-tcl --enable-gtk3",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
 provides = ["/usr/bin/gtkwave"]
 
 [packages.gcc-riscv-elf]
-version = "15.2.0"
-version_check = "url:https://ftpmirror.gnu.org/gnu/gcc/|gcc-([0-9]+\\.[0-9]+\\.[0-9]+)"
+version = "16-20260118"
+version_check = "gcc-snapshot:"
 description = "GCC cross-compiler for RISC-V bare-metal (riscv64-elf)"
-url = "https://ftpmirror.gnu.org/gnu/gcc/gcc-${version}/gcc-${version}.tar.xz"
+url = "https://gcc.gnu.org/pub/gcc/snapshots/LATEST-16/gcc-${version}.tar.xz"
 git_url = "git://gcc.gnu.org/git/gcc.git"
 use_git = false
 stage = 15
