--- a/packages/y.toml
+++ b/packages/y.toml
@@ -4,7 +4,8 @@
 version = "0.61"
 version_check = "github:YosysHQ/yosys"
 description = "Yosys Open SYnthesis Suite - RTL synthesis framework"
-url = "https://github.com/YosysHQ/yosys/releases/download/${version}/yosys-${version}.tar.gz"
+url = "https://github.com/YosysHQ/yosys/releases/download/v${version}/yosys.tar.gz"
+source_dir = "yosys"
 git_url = "https://github.com/YosysHQ/yosys.git"
 use_git = false
 stage = 15
