Add alacritty, fix post-install triggers
- Add alacritty 0.16.1 (GPU-accelerated terminal)
- Fix pk-install trigger patterns to match ./ prefixed paths
- Remove triggers field from gsettings-desktop-schemas, gedit (use built-in hooks)

--- a/packages/a.toml
+++ b/packages/a.toml
@@ -1,3 +1,22 @@
+[packages.alacritty]
+version = "0.16.1"
+version_check = "github:alacritty/alacritty"
+description = "GPU-accelerated terminal emulator"
+url = "https://github.com/alacritty/alacritty/archive/refs/tags/v${version}.tar.gz"
+git_url = "https://github.com/alacritty/alacritty.git"
+use_git = false
+stage = 11
+source_dir = "alacritty-${version}"
+depends = ["fontconfig", "freetype", "libxcb", "libxkbcommon"]
+build_commands = [
+    "cargo build --release --no-default-features --features=x11",
+    "install -Dm755 target/release/alacritty ${PKG}/usr/bin/alacritty",
+    "install -Dm644 extra/linux/Alacritty.desktop ${PKG}/usr/share/applications/Alacritty.desktop",
+    "install -Dm644 extra/logo/alacritty-term.svg ${PKG}/usr/share/icons/hicolor/scalable/apps/Alacritty.svg",
+    "install -Dm644 extra/completions/alacritty.bash ${PKG}/usr/share/bash-completion/completions/alacritty"
+]
+provides = ["/usr/bin/alacritty"]
+
 [packages.aspell]
 version = "0.60.8.1"
 version_check = "gnu:aspell"
