Add GPU video acceleration support, remove tinyprog
- libva: add meson build config with X11/DRM support
- nv-codec-headers: NVIDIA codec headers for FFmpeg
- nvidia-vaapi-driver: VA-API driver for NVIDIA GPUs
- orc: Optimized Inner Loops Runtime Compiler (gstreamer dep)
- ffmpeg: enable nvenc/nvdec/vaapi hardware acceleration
- Remove tinyprog (Python packages should use pip, not system pkg)

--- a/packages/f.toml
+++ b/packages/f.toml
@@ -133,11 +133,12 @@ url = "https://ffmpeg.org/releases/ffmpeg-${version}.tar.xz"
 git_url = "https://git.ffmpeg.org/ffmpeg.git"
 use_git = false
 stage = 16
+build_order = 15
+depends = ["nv-codec-headers", "libva"]
 # Note: --disable-x86asm until nasm package is added (hand-optimized asm improves performance)
-# TODO: Add --enable-nvenc --enable-cuda --enable-vaapi when GPU drivers available
 skip_optimization = true
 build_commands = [
-    "./configure --prefix=/usr --enable-shared --disable-static --disable-debug --enable-gpl --enable-version3 --disable-doc --disable-x86asm",
+    "./configure --prefix=/usr --enable-shared --disable-static --disable-debug --enable-gpl --enable-version3 --disable-doc --disable-x86asm --enable-vaapi --enable-nvenc --enable-nvdec --enable-ffnvcodec",
     "make -j${NPROC}",
     "make DESTDIR=${PKG} install"
 ]
