--- a/packages/l.toml
+++ b/packages/l.toml
@@ -797,6 +797,11 @@ url = "https://github.com/intel/libva/releases/download/${version}/libva-${versi
 git_url = "https://github.com/intel/libva.git"
 use_git = false
 stage = 16
+build_order = 6
+depends = ["libdrm", "libX11", "libXext", "libXfixes", "mesa"]
+build_system = "meson"
+meson_flags = "-Dwith_x11=yes -Dwith_wayland=no -Dwith_drm=yes -Ddisable_drm=false"
+provides = ["/usr/lib/libva.so", "/usr/lib/libva-drm.so", "/usr/lib/libva-x11.so"]
 
 [packages.libavif]
 version = "1.3.0"
