Fix steam wrapper to call bin_steam.sh directly
The steam script detects its package name from $0. When called as
steam.sh it's not recognized. bin_steam.sh is special-cased to work.

--- a/packages/s.toml
+++ b/packages/s.toml
@@ -115,7 +115,7 @@ build_commands = [
     "mv ${PKG}/usr/bin/steam ${PKG}/usr/lib/steam/steam.sh",
     "echo '#!/bin/sh' > ${PKG}/usr/bin/steam",
     "echo 'export LD_LIBRARY_PATH=/usr/lib/steam:$LD_LIBRARY_PATH' >> ${PKG}/usr/bin/steam",
-    "echo 'exec /usr/lib/steam/steam.sh \"$@\"' >> ${PKG}/usr/bin/steam",
+    "echo 'exec /usr/lib/steam/bin_steam.sh \"$@\"' >> ${PKG}/usr/bin/steam",
     "chmod +x ${PKG}/usr/bin/steam"
 ]
 provides = ["/usr/bin/steam"]
