--- a/packages/l.toml
+++ b/packages/l.toml
@@ -741,18 +741,24 @@ description = "GNU C Library (32-bit)"
 url = "https://ftpmirror.gnu.org/gnu/glibc/glibc-${version}.tar.xz"
 git_url = ""
 use_git = false
-stage = 13
-depends = ["gcc", "linux-headers"]
+stage = 3
+build_order = 26
+depends = ["glibc", "linux-headers"]
+# Build 32-bit glibc using gcc -m32. This works because glibc's configure
+# detects cross-compilation and doesn't try to run test programs.
+# Must be built BEFORE gcc-multilib, then gcc is rebuilt with full multilib.
 build_commands = [
-    "mkdir -p build32 && cd build32 && echo 'rootsbindir=/usr/sbin' > configparms",
+    "mkdir -p build32",
+    "cd build32 && echo 'rootsbindir=/usr/sbin' > configparms",
     "cd build32 && CC='gcc -m32' CXX='g++ -m32' ../configure --prefix=/usr --host=i686-pc-linux-gnu --build=x86_64-pc-linux-gnu --libdir=/usr/lib32 --enable-kernel=5.4 --enable-stack-protector=strong --disable-nscd --disable-werror libc_cv_slibdir=/usr/lib32",
     "cd build32 && make -j${NPROC}",
     "cd build32 && make DESTDIR=${PKG} install",
-    "rm -rf ${PKG}/usr/bin ${PKG}/usr/sbin ${PKG}/usr/share ${PKG}/usr/include ${PKG}/etc ${PKG}/var",
-    "mkdir -p ${PKG}/lib",
-    "ln -sf ../usr/lib32/ld-linux.so.2 ${PKG}/lib/ld-linux.so.2"
+    "rm -rf ${PKG}/usr/bin ${PKG}/usr/sbin ${PKG}/usr/share ${PKG}/etc ${PKG}/var",
+    "mkdir -p ${PKG}/lib ${PKG}/usr/include/gnu",
+    "ln -sf ../usr/lib32/ld-linux.so.2 ${PKG}/lib/ld-linux.so.2",
+    "cp ${PKG}/usr/include/gnu/stubs-32.h /usr/include/gnu/ 2>/dev/null || true"
 ]
-provides = ["/usr/lib32/libc.so.6", "/lib/ld-linux.so.2"]
+provides = ["/usr/lib32/libc.so.6", "/lib/ld-linux.so.2", "/usr/include/gnu/stubs-32.h"]
 
 [packages.lib32-mesa]
 version = "25.3.4"
